--- a/index.html
+++ b/index.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="weekend test">
+    <link rel="stylesheet" href="css\style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Weekend Test</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    
+
 </head>
 <body>
-    <h1>
-        projects
-    </h1>
+    <header>
+        <h1>Signup</h1>
+    </header>
+    <main>
+        <div class="FORM">
+            <form action="divya" id="form01">
+                <label for="full name">Full Name</label>
+                <input type="text" name="Full Name" class="WIDTH" required>
+                <br>
+                <hr>
+                <label for="email">Email</label>
+                <input type="email" name="email" class="WIDTH" required>
+                <br>
+                <hr>
+                <label for="password">Password</label>
+                <input type="password" name="password" class="WIDTH" required>
+                <br>
+                <hr>
+                <label for="confirm password">Confirm Password</label>
+                <input type="password" name="confirm password" class="WIDTH" required>
+                <br>
+                <hr>
+                <label for="Date of birth">DOB</label>
+                <input type="date" name="DOB" required>
+                <br>
+                <hr>
+                <input type="radio" class="radio" name="category" id="Student" value="Student" required>
+                <label for="student">Student</label>
+                <input type="radio" class="radio" name="category" id="Employee">
+                <label for="employee">Employee</label>
+                <br>
+                <br>
+
+                <input type="checkbox" name="checkbox" id="declaration" required>
+                <label for="declaration">I agree to all the Terms and conditions</label>
+                <br>
+                <br>
+                <button class="btn" type="submit" form="form01" value="Signup">Signup</button>
+
+            </form>
+
+        </div>
+    </main>
 </body>
 </html>
