--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <br>
                 <hr>
                 <label for="Date of birth">DOB</label>
-                <input type="date" name="DOB" required>
+                <input type="Date" name="DOB" required>
                 <br>
                 <hr>
                 <input type="radio" class="radio" name="category" id="Student" value="Student" required>
