--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <input type="text" name="Full Name" class="WIDTH" required>
                 <br>
                 <hr>
-                <label for="email">Email</label>
+                <label for="email">Email</label>git
                 <input type="email" name="email" class="WIDTH" required>
                 <br>
                 <hr>
-                <label for="password">Password</label>
-                <input type="password" name="password" class="WIDTH" required>
+                <label for="Password">Password</label>
+                <input type="Password" name="password" class="WIDTH" required>
                 <br>
                 <hr>
                 <label for="confirm password">Confirm Password</label>
