--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <input type="email" name="email" class="WIDTH" required>
                 <br>
                 <hr>
-                <label for="Password">Password</label>
-                <input type="Password" name="password" class="WIDTH" required>
+                <label for="password">Password</label>
+                <input type="password" name="password" class="WIDTH" required>
                 <br>
                 <hr>
                 <label for="confirm password">Confirm Password</label>
