--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="text" name="Full Name" class="WIDTH" required>
                 <br>
                 <hr>
-                <label for="email">Email</label>git
+                <label for="email">Email</label>gitgit
                 <input type="email" name="email" class="WIDTH" required>
                 <br>
                 <hr>
@@ -35,7 +35,7 @@
                 <input type="password" name="confirm password" class="WIDTH" required>
                 <br>
                 <hr>
-                <label for="Date of birth">DOB</label>
+                <label for="date of birth">DOB</label>
                 <input type="Date" name="DOB" required>
                 <br>
                 <hr>
