--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <hr>
                 <label for="confirm password">Confirm Password</label>
                 <input type="password" name="confirm password" class="WIDTH" required>
-                <br>
+                <br>git
                 <hr>
                 <label for="date of birth">DOB</label>
                 <input type="Date" name="DOB" required>
@@ -42,7 +42,7 @@
                 <input type="radio" class="radio" name="category" id="Student" value="Student" required>
                 <label for="student">Student</label>
                 <input type="radio" class="radio" name="category" id="Employee">
-                <label for="employee">Employee</label>
+                <label for="Employee">Employee</label>
                 <br>
                 <br>
 
