--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="radio" class="radio" name="category" id="Student" value="Student" required>
                 <label for="student">Student</label>
                 <input type="radio" class="radio" name="category" id="Employee">
-                <label for="Employee">Employee</label>
+                <label for="employee">Employee</label>
                 <br>
                 <br>
 
