--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="weekend test">
     <link rel="stylesheet" href="css\style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Weekend Test</title>
+    <title>Weekend Contest</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     
 
