--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                 <br>
                 <hr>
                 <label for="password">Password</label>
-                <input type="password" name="password" class="WIDTH" required>
+                <input type="Password" name="password" class="WIDTH" required>
                 <br>
-                <hr>
+                <hr> 
+                
                 <label for="confirm password">Confirm Password</label>
                 <input type="password" name="confirm password" class="WIDTH" required>
                 <br>git
